# cnes-enriquecimento-dados

./: README.md
CNES/: .gitignore  README.md  pyproject.toml
CNES/data/: cnes_amostra.csv  cnes_dados_enriquecidos.csv
CNES/notebooks/: desenvolvimento.ipynb  teste.ipynb
CNES/src/cnes/: cnes_dados_enriquecidos.py
